--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   *{box-sizing:border-box;font-family:Inter,system-ui,Arial,sans-serif}
   body{margin:0;background:var(--bg);color:#1f2933;padding:28px;}
   .wrap{max-width:980px;margin:0 auto}
-  header{display:flex;align-items:center;gap:12px;margin-bottom:22px;justify-content:center}
-  header h1{margin:0;font-size:30px;font-weight:700;color:var(--green);}
+  header{display:flex;align-items:center;justify-content:center;margin-bottom:22px}
+  header h1{margin:0;font-size:30px;font-weight:700;color:var(--green)}
   .card{background:var(--card);padding:22px;border-radius:var(--radius);box-shadow:0 8px 20px rgba(9,20,30,0.06)}
   .controls{display:flex;gap:12px;align-items:center;margin-bottom:16px;flex-wrap:wrap}
   .controls input[type=search]{width:100%;max-width:540px;padding:12px;border-radius:8px;border:1px solid #e6e9ea}
@@ -28,22 +28,23 @@
   thead th{background:var(--green);color:#fff;padding:18px 14px;text-align:left}
   tbody td{padding:18px 14px;border-bottom:1px solid #f1f2f3}
   .formRow{display:flex;flex-direction:column;gap:10px;margin-top:20px}
-  .formRow input,.formRow select{padding:12px;border-radius:8px;border:1px solid #e6e9ea}
+  .formRow input,.formRow select,.formRow textarea{padding:12px;border-radius:8px;border:1px solid #e6e9ea}
   .formRow .row{display:flex;gap:10px;flex-wrap:wrap}
   .formRow .row input{flex:1}
   .notice{font-size:13px;color:var(--muted);margin-top:12px}
-  @media(min-width:900px){ .formRow .row{flex-direction:row} .controls input[type=search]{width:540px}}
+  @media(min-width:900px){
+    .formRow .row{flex-direction:row}
+    .controls input[type=search]{width:540px}
+  }
 </style>
 </head>
 <body>
 <div class="wrap">
-  <header>
-    <h1>PERFECT DIGITAL NETWORK</h1>
-  </header>
+  <header><h1>PERFECT DIGITAL NETWORK</h1></header>
 
   <div class="card">
     <div class="controls">
-      <input id="searchBox" type="search" placeholder="Search client, mobile or address" />
+      <input id="searchBox" type="search" placeholder="Search client, mobile or remark" />
       <select id="refreshSel" title="Auto refresh">
         <option value="0">Refresh off</option>
         <option value="15">Refresh every 15s</option>
@@ -54,8 +55,8 @@
       <button id="reloadBtn" class="btn">Reload now</button>
     </div>
 
-    <div class="tableWrap" id="tableWrap">
-      <table id="dataTable" role="table" aria-label="Pending payments table">
+    <div class="tableWrap">
+      <table id="dataTable" role="table">
         <thead id="tableHead"></thead>
         <tbody id="tableBody"></tbody>
       </table>
@@ -77,101 +78,141 @@
         <select id="f_status">
           <option>pending</option>
           <option>paid</option>
-        </select>
-        <select id="f_address">
-          <option value="">Select Area</option>
-          <option>Wazirpur</option>
-          <option>Shastri Nagar</option>
-          <option>Ashok Vihar</option>
-          <option>Gulabi Bagh</option>
+          <option>other</option>
         </select>
       </div>
+      <textarea id="f_remark" rows="2" placeholder="Remark"></textarea>
       <div style="display:flex;gap:12px;align-items:center">
         <button id="addBtn" class="btn">Add</button>
         <div id="msg" style="color:var(--muted)"></div>
       </div>
-      <div class="notice">Tip: choose area before adding new client.</div>
+      <div class="notice">Tip: edit your Google Sheet directly or use this form.</div>
     </div>
   </div>
 </div>
 
 <script>
 const SHEETDB_API='https://sheetdb.io/api/v1/zla8gcygz4jgd';
-const canonical=["clientname","mobile","amount","date","status","address"];
-function norm(s){return String(s||'').toLowerCase().replace(/\s+/g,'').replace(/[_\\-]+/g,'').replace(/[^a-z0-9]/g,'');}
-let lastData=[],headerMap={};
+const canonical=["clientname","mobile","amount","date","status","remark"];
 
-async function fetchData(){
- try{
-  const res=await fetch(SHEETDB_API);
-  if(!res.ok)throw new Error('Fetch failed: '+res.status);
-  const data=await res.json();
-  lastData=Array.isArray(data)?data:[];
-  detectHeaders(lastData);
-  renderTable(lastData);
- }catch(e){console.error(e);document.getElementById('msg').textContent='Error loading data: '+e.message;}
+function norm(s){
+  return String(s||'').toLowerCase().replace(/\s+/g,'').replace(/[_\\-]+/g,'').replace(/[^a-z0-9]/g,'');
 }
 
+let lastData=[],headerMap={};
+
+// --- FIXED detectHeaders (no wrong fallback) ---
 function detectHeaders(data){
- headerMap={};
- if(data&&data.length){
-   const keys=Object.keys(data[0]);
-   const lookup={};keys.forEach(k=>lookup[norm(k)]=k);
-   canonical.forEach(c=>{
-     if(lookup[norm(c)])headerMap[c]=lookup[norm(c)];
-     else if(keys.length)headerMap[c]=keys[0];
-   });
- }else{canonical.forEach(c=>headerMap[c]=c);}
+  headerMap={};
+  const keysList=canonical;
+  if(data && data.length){
+    const keys=Object.keys(data[0]);
+    const lookup={};
+    keys.forEach(k=>lookup[norm(k)]=k);
+    const variants={
+      clientname:['clientname','client','name','client_name','client name'],
+      mobile:['mobile','phone','phonenumber','mobilephone','mobile_number'],
+      amount:['amount','amt','price'],
+      date:['date','duedate','due_date','billingdate'],
+      status:['status','paymentstatus','st'],
+      remark:['remark','remarks','note','notes']
+    };
+    keysList.forEach(c=>{
+      if(lookup[norm(c)]){headerMap[c]=lookup[norm(c)];return;}
+      let found=null;
+      const vs=variants[c]||[c];
+      for(const v of vs){if(lookup[norm(v)]){found=lookup[norm(v)];break;}}
+      if(found) headerMap[c]=found;
+      else headerMap[c]=c; // safe default (prevents mis-mapping)
+    });
+  } else {
+    keysList.forEach(c=>headerMap[c]=c);
+  }
+}
+
+async function fetchData(){
+  try{
+    const res=await fetch(SHEETDB_API);
+    if(!res.ok)throw new Error('Fetch failed: '+res.status);
+    const data=await res.json();
+    lastData=Array.isArray(data)?data:[];
+    detectHeaders(lastData);
+    renderTable(lastData);
+  }catch(e){
+    console.error(e);
+    msg.textContent='Error loading data: '+e.message;
+  }
 }
 
 function renderTable(data){
- const th=document.getElementById('tableHead'),tb=document.getElementById('tableBody');
- th.innerHTML='';tb.innerHTML='';
- const titles={clientname:'Client Name',mobile:'Mobile',amount:'Amount',date:'Date',status:'Status',address:'Address'};
- const headRow=document.createElement('tr');
- Object.keys(titles).forEach(k=>{const thcell=document.createElement('th');thcell.textContent=titles[k];headRow.appendChild(thcell);});
- th.appendChild(headRow);
- const search=document.getElementById('searchBox').value.trim().toLowerCase();
- const showOnlyPending=filterPending;
- (data||[]).forEach(row=>{
-  const visible=Object.values(row).join(' ').toLowerCase().includes(search);
-  if(!visible)return;
-  if(showOnlyPending&&!String(row[headerMap['status']]||'').toLowerCase().includes('pending'))return;
-  const tr=document.createElement('tr');
-  canonical.forEach(k=>{
-    const td=document.createElement('td');
-    const actualKey=headerMap[k];
-    td.textContent=(actualKey&&row[actualKey]!==undefined)?row[actualKey]:'';
-    tr.appendChild(td);
+  const th=document.getElementById('tableHead');
+  const tb=document.getElementById('tableBody');
+  th.innerHTML='';tb.innerHTML='';
+  const titles={clientname:'Client Name',mobile:'Mobile',amount:'Amount',date:'Date',status:'Status',remark:'Remark'};
+  const headRow=document.createElement('tr');
+  Object.keys(titles).forEach(k=>{
+    const thcell=document.createElement('th');
+    thcell.textContent=titles[k];
+    headRow.appendChild(thcell);
   });
-  tb.appendChild(tr);
- });
+  th.appendChild(headRow);
+  const search=document.getElementById('searchBox').value.trim().toLowerCase();
+  const showOnlyPending=filterPending;
+  (data||[]).forEach(row=>{
+    const visible=Object.values(row).join(' ').toLowerCase().includes(search);
+    if(!visible)return;
+    if(showOnlyPending&&!String(row[headerMap['status']]||'').toLowerCase().includes('pending'))return;
+    const tr=document.createElement('tr');
+    canonical.forEach(k=>{
+      const td=document.createElement('td');
+      const actualKey=headerMap[k];
+      td.textContent=(actualKey && row[actualKey]!==undefined)?row[actualKey]:'';
+      tr.appendChild(td);
+    });
+    tb.appendChild(tr);
+  });
 }
 
 let refreshTimer=null,filterPending=false;
 reloadBtn.onclick=()=>{msg.textContent='Reloading…';fetchData().then(()=>msg.textContent='');};
 filterPendingBtn.onclick=e=>{filterPending=!filterPending;e.target.classList.toggle('btn',filterPending);e.target.classList.toggle('ghost',!filterPending);renderTable(lastData);};
 searchBox.oninput=()=>renderTable(lastData);
-refreshSel.onchange=e=>{const v=Number(e.target.value);if(refreshTimer){clearInterval(refreshTimer);refreshTimer=null;}if(v>0)refreshTimer=setInterval(fetchData,v*1000);};
+refreshSel.onchange=e=>{
+  const v=Number(e.target.value);
+  if(refreshTimer){clearInterval(refreshTimer);refreshTimer=null;}
+  if(v>0)refreshTimer=setInterval(fetchData,v*1000);
+};
 
 addBtn.onclick=async()=>{
- const name=f_name.value.trim(),mobile=f_mobile.value.trim(),amount=f_amount.value.trim(),date=f_date.value.trim(),status=f_status.value.trim(),address=f_address.value.trim();
- if(!name&&!mobile){alert('Please provide at least Client Name or Mobile.');return;}
- if(!Object.keys(headerMap).length)await fetchData();
- const payloadObj={};
- payloadObj[headerMap['clientname']||'clientname']=name||'';
- payloadObj[headerMap['mobile']||'mobile']=mobile||'';
- payloadObj[headerMap['amount']||'amount']=amount||'';
- payloadObj[headerMap['date']||'date']=date||'';
- payloadObj[headerMap['status']||'status']=status||'';
- payloadObj[headerMap['address']||'address']=address||'';
- try{
-  const res=await fetch(SHEETDB_API,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({data:[payloadObj]})});
-  if(!res.ok)throw new Error(res.status);
-  msg.textContent='Added — reloading...';
-  ['f_name','f_mobile','f_amount','f_date'].forEach(id=>document.getElementById(id).value='');
-  f_address.value='';setTimeout(()=>fetchData().then(()=>msg.textContent=''),400);
- }catch(err){console.error(err);alert('Network error adding row: '+err.message);}
+  const name=f_name.value.trim(),
+        mobile=f_mobile.value.trim(),
+        amount=f_amount.value.trim(),
+        date=f_date.value.trim(),
+        status=f_status.value.trim(),
+        remark=f_remark.value.trim();
+  if(!name && !mobile){alert('Please provide at least Client Name or Mobile.');return;}
+  if(!Object.keys(headerMap).length)await fetchData();
+  const payloadObj={};
+  payloadObj[headerMap['clientname']||'clientname']=name||'';
+  payloadObj[headerMap['mobile']||'mobile']=mobile||'';
+  payloadObj[headerMap['amount']||'amount']=amount||'';
+  payloadObj[headerMap['date']||'date']=date||'';
+  payloadObj[headerMap['status']||'status']=status||'';
+  payloadObj[headerMap['remark']||'remark']=remark||'';
+  try{
+    const res=await fetch(SHEETDB_API,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({data:[payloadObj]})
+    });
+    if(!res.ok)throw new Error(res.status);
+    msg.textContent='Added — reloading...';
+    ['f_name','f_mobile','f_amount','f_date','f_remark'].forEach(id=>document.getElementById(id).value='');
+    setTimeout(()=>fetchData().then(()=>msg.textContent=''),400);
+  }catch(err){
+    console.error(err);
+    alert('Network error adding row: '+err.message);
+  }
 };
 
 fetchData();
